--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "teste",
+  "name": "animes-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Projeto base de uma API com MVC",
+  "keywords": [
+    "nodejs",
+    "javascript",
+    "prisma"
+  ],
   "license": "MIT",
-  "author": "",
+  "author": "Felipe Dev",
   "type": "module",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9"
-  },
-  "devDependencies": {
+    "express": "^5.1.0",
+    "nodemon": "^3.1.9",
     "prisma": "^6.5.0"
   }
 }
